syntax = "proto3";

package identity;

option go_package = "pb";

message GenerateTokenReq {
  int64 userId = 1;
}

message GenerateTokenResp {
  string accessToken = 1;
  int64 accessExpire = 2;
  int64 refreshAfter = 3;
}

message ClearTokenReq {
  int64 userId = 1;
}

message ClearTokenResp {
  bool ok = 1;
}

message ValidateTokenReq {
  int64 userId = 1;
  string token = 2;
}

message ValidateTokenResp {
  bool  ok = 1;
}

service Identity {
  // 生成token, 只让用户服务访问
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
  // 清理token, 只让用户服务访问
  rpc clearToken(ClearTokenReq) returns(ClearTokenResp);
  rpc validateToken(ValidateTokenReq) returns(ValidateTokenResp);
}
